crates/datarig-tui/tests/snapshots/ui_snapshots__commands_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ○ ×                                                                                                        "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg                        ││ local-pg / datarig  127.0.0.1:55432 · policy: default                                    Space c s switch connection │"
"│  ▾ datarig default                   ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor                                                         │" Hidden by multi-width symbols: [(57, " ")]
"│    ▸ analytics                       ││  2▎SELECT * FROM shop.users WHERE id <= 8;                                                                           │"
"│    ▸ public                          ││  3                                                                                                                   │"
"│    ▸ shop                            ││  4 SELECT u.name, o.status, o.total_amount                                                                           │"
"│                               ╭ Commands ────────────────────────────────────────────────────────────────────────────────────╮                               │"
"│                               │ : type a command or an action name                                                           │                               │"
"│                               ├──────────────────────────────────────────────────────────────────────────────────────────────┤                               │"
"│                               │  :conn, :connect <profile>  Connect to a profile                                             │                               │"
"│                               │  :set <setting>=<value>     Change a setting                                                 │                               │"
"│                               │  :help, :h                  Keyboard help                                       F1 / Space ? │                               │"
"│                               │  :run                       Run statement under cursor                                Ctrl+E │                               │"
"│                               │  :cancel                    Cancel running query                                      Ctrl+C │                               │"
"│                               │  :quit, :q                  Close the tab (on the last tab: quit)                            │                               │"
"│                               │  :qall, :qa, :quitall       Quit                                                      Ctrl+Q │                               │"
"│                               │  :w, :write [<name>]        Save (a console asks for a name; with a nam…  Ctrl+S / Space s s │                               │"
"│                               │  :wq, :x [<name>]           Save, then close the tab (on the last tab: …  Ctrl+S / Space s s │                               │"
"│                               │  :tabnew                    New console tab                               Ctrl+T / Space t n │                               │"
"│                               │  :tabclose                  Close tab                                     Ctrl+W / Space t c │                               │"
"│                               │  :recover                   Bring back a closed console (also from earlier runs)             │                               │"
"│                               ╰─────────────────────────────────────────────────────── Tab/↑↓ select · Enter run · Esc close ╯                               │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" COMMAND  local-pg · policy: default │ Connected to local-pg                                                                                                 EN "
