crates/datarig-tui/tests/snapshots/ui_snapshots__commands_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: default│"
"│  ▾ datarig default   ││  1 -- datarig 🐘  Ctrl+E: run the statement under the│" Hidden by multi-width symbols: [(41, " ")]
"│    ▸ ana╭ Commands ────────────────────────────────────────────────╮         │"
"│    ▸ pub│ : type a command or an action name                       │         │"
"│    ▸ sho├──────────────────────────────────────────────────────────┤         │"
"│         │  :conn, :connect <profile>  Connect to a profile         │         │"
"│         │  :set <setting>=<value>     Change a setting             │         │"
"│         │  :help, :h                  Keyboard help   F1 / Space ? │         │"
"│         │  :run                       Run statement under…  Ctrl+E │         │"
"│         │  :cancel                    Cancel running query  Ctrl+C │         │"
"│         │  :quit, :q                  Close the tab (on the last … │         │"
"│         │  :qall, :qa, :quitall       Quit                  Ctrl+Q │reated_at│"
"│         │  :w, :write [<name>]        Save (a…  Ctrl+S / Space s s │         │"
"│         │  :wq, :x [<name>]           Save, t…  Ctrl+S / Space s s │         │"
"│         │  :tabnew                    New con…  Ctrl+T / Space t n │         │"
"│         │  :tabclose                  Close t…  Ctrl+W / Space t c │llar, 'it│"
"│         │  :recover                   Bring back a closed console… │         │"
"│         ╰─────────────────── Tab/↑↓ select · Enter run · Esc close ╯         │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" COMMAND  local-pg · policy: default │ Connected to local-pg                 EN "
