crates/datarig-tui/tests/snapshots/ui_snapshots__commands_error_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ○ ×                                                                                                        "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg                        ││ local-pg / datarig  127.0.0.1:55432 · policy: default                                    Space c s switch connection │"
"│  ▾ datarig default                   ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor                                                         │" Hidden by multi-width symbols: [(57, " ")]
"│    ▸ analytics                       ││  2▎SELECT * FROM shop.users WHERE id <= 8;                                                                           │"
"│    ▸ public                          ││  3                                                                                                                   │"
"│    ▸ shop                            ││  4 SELECT u.name, o.status, o.total_amount                                                                           │"
"│▸ ○   分析-replica             ╭ Commands ────────────────────────────────────────────────────────────────────────────────────╮                               │" Hidden by multi-width symbols: [(8, " "), (10, " ")]
"│▸ ○   分析-replica             │ : frobz                                                                                      │                               │" Hidden by multi-width symbols: [(8, " "), (10, " ")]
"│                               ├──────────────────────────────────────────────────────────────────────────────────────────────┤                               │"
"│                               │  No matching commands                                                                        │                               │"
"│                               │  Not a command: frobz                                                                        │                               │"
"│                               ╰─────────────────────────────────────────────────────── Tab/↑↓ select · Enter run · Esc close ╯                               │"
"│                                      ││ 11 SELECT * FROM analytics.events ORDER BY created_at DESC;                                                          │"
"│                                      ││ 12                                                                                                                   │"
"│                                      ││ 13 SELECT analytics.slow(30);                                                                                        │"
"│                                      ││ 14                                                                                                                   │"
"│                                      ││ 15 SELECT $$a body; with a semicolon$$ AS dollar, 'it''s; fine' AS quoted;                                           │"
"│                                      ││ 16                                                                                                                   │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" COMMAND  local-pg · policy: default │ Connected to local-pg                                                                                                 EN "
