crates/datarig-tui/tests/snapshots/ui_snapshots__commands_error_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ○ ×                                        "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: default│"
"│  ▾ datarig default   ││  1 -- datarig 🐘  Ctrl+E: run the statement under the│" Hidden by multi-width symbols: [(41, " ")]
"│    ▸ ana╭ Commands ────────────────────────────────────────────────╮         │"
"│    ▸ pub│ : frobz                                                  │         │"
"│    ▸ sho├──────────────────────────────────────────────────────────┤         │"
"│▸ ○   分 │  No matching commands                                    │         │" Hidden by multi-width symbols: [(8, " ")]
"│▸ ○   分 │  Not a command: frobz                                    │         │" Hidden by multi-width symbols: [(8, " ")]
"│         ╰─────────────────── Tab/↑↓ select · Enter run · Esc close ╯         │"
"│                      ││  8                                                   │"
"│                      ││  9 SELECT * FROM analytics.events;                   │"
"│                      ││ 10                                                   │"
"│                      ││ 11 SELECT * FROM analytics.events ORDER BY created_at│"
"│                      ││ 12                                                   │"
"│                      ││ 13 SELECT analytics.slow(30);                        │"
"│                      ││ 14                                                   │"
"│                      ││ 15 SELECT $$a body; with a semicolon$$ AS dollar, 'it│"
"│                      ││ 16                                                   │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" COMMAND  local-pg · policy: default │ Connected to local-pg                 EN "
