crates/datarig-tui/tests/snapshots/ui_snapshots__console_close_unsaved_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 * ○ ×                                      "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: default│"
"│  ▾ datarig default   ││  1 -- datarig 🐘  Ctrl+E: run the statement under the│" Hidden by multi-width symbols: [(41, " ")]
"│    ▸ analytics       ││  2  -- moreSELECT * FROM shop.users WHERE id <= 8;   │"
"│    ▸ public          ││  3                                                   │"
"│    ▸ shop            ││  4 SELECT u.name, o.status, o.total_amount           │"
"│                      ││  5 FROM shop.orders o                                │"
"│         ╭ Close this tab? ─────────────────────────────────────────╮         │"
"│         │                                                          │         │"
"│         │ This console's edits could not be saved. Closing the tab │         │"
"│         │ loses them.                                              │         │"
"│         │ Not saved: permission denied                             │         │"
"│         │                                                          │reated_at│"
"│         ╰────────────────────────────────── y close · n/Enter keep ╯         │"
"│                      ││ 13 SELECT analytics.slow(30);                        │"
"│                      ││ 14                                                   │"
"│                      ││ 15 SELECT $$a body; with a semicolon$$ AS dollar, 'it│"
"│                      ││ 16                                                   │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Not saved: permission denied           EN "
