crates/datarig-tui/tests/snapshots/ui_snapshots__context_menu_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ×                                                                                                          "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ local                               ││ local-pg / datarig  127.0.0.1:55432 · policy: default                                    Space c s switch connection │"
"│  ▸ ○   scratch                       ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor                                                         │" Hidden by multi-width symbols: [(57, " ")]
"│▾ work                                ││  2▎SELECT * FROM shop.users WHERE id <= 8;                                                                           │"
"│  ▾ prod                              ││  3                                                                                                                   │"
"│    ▸ ⠋   orders-prod                 ││  4 SELECT u.name, o.status, o.total_amount                                                                           │"
"│    ▸ ✕   分析-replica                ││  5 FROM shop.orders o                                                                                                │" Hidden by multi-width symbols: [(12, " "), (14, " ")]
"│        Connection failed: password a…││  6 JOIN shop.users u ON u.id = o.user_id                                                                             │"
"│  ▸ ○   orders-stage                  ││  7 WHERE o.status = 'paid';                                                                                          │"
"│▾ ●   local-pg                        ││  8                                                                                                                   │"
"│  ▾ da╭─────────────────────────────────────────────╮FROM analytics.events;                                                                                   │"
"│    ▸ │ › type to filter                            │                                                                                                         │"
"│    ▸ │ ● local-pg                                  │FROM analytics.events ORDER BY created_at DESC;                                                          │"
"│    ▸ │  Explorer: open or toggle             Enter │                                                                                                         │"
"│      │  Explorer: reload                         r │alytics.slow(30);                                                                                        │"
"│      │  Edit connection profile                  e │                                                                                                         │"
"│      │  Duplicate connection profile             c │a body; with a semicolon$$ AS dollar, 'it''s; fine' AS quoted;                                           │"
"│      │  Delete connection profile                d │                                                                                                         │"
"│      │  Test connection                          t │                                                                                                         │"
"│      │  Disconnect                               x │                                                                                                         │"
"│      │  New console on this connection           o │                                                                                                         │"
"│      │  Move connection profile to a folder      m │                                                                                                         │"
"│      │ Explorer                                    │                                                                                                         │"
"│      │  Explorer: filter profiles                / │                                                                                                         │"
"│      │  New connection profile                   n │                                                                                                         │"
"│      │  New folder                               N │                                                                                                         │"
"│      ╰─────────────────────────────────────────────╯                                                                                                         │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connection failed: password authentication failed for user "report"                                                    EN "
